# and-rs

./: .gitignore  .make-config.env  .travis.yml  Cargo.toml  Makefile  README.md  shard.yml
.cargo/: config
spec/: acceptance_spec.cr  assets.cr  spec_helpers.cr
specs/: specs_spec.cr
src/cli/: Cargo.toml
src/cli/src/: main.rs
src/lib/: Cargo.toml
src/lib/src/: compile.rs  context.rs  launch.rs  lib.rs  lib.rs.in  os.rs  package.rs  process.rs  shared.rs
src/lib/src/assets/: main.cr  resource.cr
src/lib/src/compile/: compile.rs  error.rs  mod.rs
src/lib/src/scaffolding/: error.rs  gen.rs  mod.rs
src/lib/src/scaffolding/assets/: Makefile  manifest.cr  manifest.xml.cr
src/lib/tests/: context.rs
tests/: acceptance.rb
